# DeParty

./: README.md  check-env.js  package.json
de-party/: package-lock.json  package.json
de-party-ER/: .gitignore  Anchor.toml  package-lock.json  package.json
de-party-ER/programs/de-party/: Cargo.toml
de-party-ER/programs/de-party/src/: errors.rs  lib.rs
de-party-ER/programs/de-party/src/contexts/: close.rs  close_config.rs  close_party.rs  close_poll.rs  close_profile.rs  create.rs  delegate_party.rs  delegate_poll.rs  end_party.rs  init.rs  join.rs  mod.rs  setup.rs  start_poll.rs  undelegate_party.rs  undelegate_poll.rs  update_config.rs  vote.rs  withdraw_treasury.rs
de-party-ER/programs/de-party/src/states/: config.rs  party.rs  poll.rs  profile.rs
de-party-ER/tests/: de-party.ts
de-party/programs/de-party/: Cargo.toml
de-party/programs/de-party/src/: errors.rs  lib.rs
de-party/programs/de-party/src/contexts/: create.rs  end.rs  (+8 more)
de-party/tests/: de-party.ts
frontend/: package-lock.json  package.json  tsconfig.json
frontend/anchor/src/: departy-exports.ts  index.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/call/: page.tsx
frontend/src/app/presentation/: page.jsx
frontend/src/components/dashboard/: dashboard-feature.tsx  departy-data-access.tsx  departy-ui.tsx
frontend/src/components/livekit/: LiveKitCallRoom.tsx  LiveKitEventCapture.tsx  PartyPolls.tsx  admin-utils.ts  livekit-utils.ts
frontend/src/components/styles/: Clubhouse.module.scss
frontend/src/components/ui/: ui-layout.tsx
frontend/src/lib/: helper.ts
(+7 files in other folders)
